// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Components/CopyTo APIKey smoke-test 1`] = `
<div class="flex items-center gap-3 rounded-lg border border-border bg-card p-4">
  <div class="flex-1">
    <div class="text-sm font-medium text-foreground">
      API Key
    </div>
    <code class="text-xs text-muted-foreground">
      sk_test_4eC39HqLyjWDarjtT1zdp7dc
    </code>
  </div>
  <button data-slot="tooltip-trigger"
          class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
          aria-label="Copy API key"
          data-state="closed"
  >
    <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-check stroke-primary"
           aria-hidden="true"
           id="Check"
      >
        <path d="M20 6 9 17l-5-5">
        </path>
      </svg>
    </div>
    <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-copy size-3"
           aria-hidden="true"
           id="Copy"
      >
        <rect width="14"
              height="14"
              x="8"
              y="8"
              rx="2"
              ry="2"
        >
        </rect>
        <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
        </path>
      </svg>
    </div>
  </button>
</div>
`;

exports[`Components/CopyTo CodeSnippet smoke-test 1`] = `
<div class="flex items-center gap-2 rounded-lg bg-muted p-4 font-mono text-sm">
  <code class="flex-1">
    function greet(name: string) {
    <br>
    &nbsp;&nbsp;return \`Hello, \${name}!\`;
    <br>
    }
  </code>
  <button data-slot="tooltip-trigger"
          class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
          aria-label="Copy code"
          data-state="closed"
  >
    <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-check stroke-primary"
           aria-hidden="true"
           id="Check"
      >
        <path d="M20 6 9 17l-5-5">
        </path>
      </svg>
    </div>
    <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-copy size-3"
           aria-hidden="true"
           id="Copy"
      >
        <rect width="14"
              height="14"
              x="8"
              y="8"
              rx="2"
              ry="2"
        >
        </rect>
        <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
        </path>
      </svg>
    </div>
  </button>
</div>
`;

exports[`Components/CopyTo CustomMessages smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Copy command"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;

exports[`Components/CopyTo Default smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Clique para copiar"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;

exports[`Components/CopyTo EmptyValue smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Clique para copiar"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;

exports[`Components/CopyTo FastTooltip smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Clique para copiar"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;

exports[`Components/CopyTo InDarkMode smoke-test 1`] = `
<div class="dark">
  <button data-slot="tooltip-trigger"
          class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
          aria-label="Clique para copiar"
          data-state="closed"
  >
    <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-check stroke-primary"
           aria-hidden="true"
           id="Check"
      >
        <path d="M20 6 9 17l-5-5">
        </path>
      </svg>
    </div>
    <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="lucide lucide-copy size-3"
           aria-hidden="true"
           id="Copy"
      >
        <rect width="14"
              height="14"
              x="8"
              y="8"
              rx="2"
              ry="2"
        >
        </rect>
        <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
        </path>
      </svg>
    </div>
  </button>
</div>
`;

exports[`Components/CopyTo LongCopiedState smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Clique para copiar"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;

exports[`Components/CopyTo LongText smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Copy long text"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;

exports[`Components/CopyTo ShortCopiedState smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Clique para copiar"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;

exports[`Components/CopyTo SlowTooltip smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Clique para copiar"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;

exports[`Components/CopyTo WithCallbacks smoke-test 1`] = `
<button data-slot="tooltip-trigger"
        class="inline-flex items-center justify-center gap-1.5 whitespace-nowrap rounded-md text-sm font-medium transition-[color,box-shadow] disabled:pointer-events-none [&amp;_svg]:pointer-events-none [&amp;_svg:not([class*='size-'])]:size-4 shrink-0 [&amp;_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 hover:text-accent-foreground disabled:opacity-100 size-7"
        aria-label="Clique para copiar"
        data-state="closed"
>
  <div class="transition-[transform,opacity] motion-reduce:transition-none scale-0 opacity-0">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-check stroke-primary"
         aria-hidden="true"
         id="Check"
    >
      <path d="M20 6 9 17l-5-5">
      </path>
    </svg>
  </div>
  <div class="absolute transition-[transform,opacity] motion-reduce:transition-none scale-100 opacity-100">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="16"
         height="16"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-copy size-3"
         aria-hidden="true"
         id="Copy"
    >
      <rect width="14"
            height="14"
            x="8"
            y="8"
            rx="2"
            ry="2"
      >
      </rect>
      <path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2">
      </path>
    </svg>
  </div>
</button>
`;
